[package]
name = "posthog"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
wit-bindgen = "0.41.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[dev-dependencies]
pretty_assertions = "1.4.1"
uuid = { version = "1.10.0", features = ["v4"] }
